--- a/dev/css/nouislider.css
+++ b/dev/css/nouislider.css
@@ -61,13 +61,14 @@
 /* Slider size and handle placement;
  */
 .noUi-horizontal {
-  height: 18px;
+  height: 7px;
 }
 .noUi-horizontal .noUi-handle {
-  width: 34px;
-  height: 28px;
-  left: -17px;
-  top: -6px;
+  border-radius: 50%;
+  width: 18px;
+  height: 18px;
+  left: -8px;
+  top: -7px;
 }
 .noUi-vertical {
   width: 18px;
@@ -87,7 +88,7 @@
   box-shadow: inset 0 1px 1px #F0F0F0, 0 3px 6px -5px #BBB;
 }
 .noUi-connect {
-  background: #3FB8AF;
+  background: #0d233f;
   border-radius: 4px;
   box-shadow: inset 0 0 3px rgba(51, 51, 51, 0.45);
   transition: background 450ms;
@@ -106,33 +107,30 @@
   background: #FFF;
   cursor: default;
   box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #EBEBEB, 0 3px 6px -3px #BBB;
+  cursor: pointer;
 }
 .noUi-active {
   box-shadow: inset 0 0 1px #FFF, inset 0 1px 7px #DDD, 0 3px 6px -3px #BBB;
 }
 /* Handle stripes;
  */
-.noUi-handle:before,
-.noUi-handle:after {
+.noUi-handle:before {
   content: "";
   display: block;
   position: absolute;
-  height: 14px;
-  width: 1px;
+  height: 7px;
+  width: 7px;
   background: #E8E7E6;
-  left: 14px;
-  top: 6px;
+  left: 0;
+  top: 0;
+  right: 0; bottom: 0;
+  border-radius: 50%;
+  margin: auto;
+  box-shadow: 0 1px 1px #8d8d8d inset;
 }
-.noUi-handle:after {
-  left: 17px;
-}
+
 .noUi-vertical .noUi-handle:before,
-.noUi-vertical .noUi-handle:after {
-  width: 14px;
-  height: 1px;
-  left: 6px;
-  top: 14px;
-}
+
 .noUi-vertical .noUi-handle:after {
   top: 17px;
 }
