--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -218,12 +218,12 @@ hr {
 h1, .h1, h2, h3, h4, h5, h6, .h2, .h3, .h4, .h5, .h6 {}
 h2, h3, h4, h5, h6, .h2, .h3, .h4, .h5, .h6 { line-height: 1.2; }
 
-h1, .h1 { font-size: 70px; margin-bottom: 20px; line-height: 1; color: #676767; font-family: 'Roboto'; font-weight: 600; color: #fff; margin-top: -.05em; }
-h2, .h2 { font-size: 30px; margin-bottom: 10px; color: #676767; font-family: 'Roboto'; font-weight: 300; text-transform: uppercase; }
-h3, .h3 { font-size: 18px; margin-bottom: 10px; color: #676767; font-family: 'Roboto'; font-weight: 300; text-transform: uppercase; }
-h4, .h4 { font-size: 17px;}
-h5, .h5 { font-size: 16px;}
-h6, .h6 { font-size: 15px;}
+h1, .h1 { font-size: 70px; margin-bottom: 20px; line-height: 1; color: #0d233f; font-family: 'Roboto'; font-weight: 600; color: #fff; margin-top: -.05em; }
+h2, .h2 { font-size: 30px; margin-bottom: 10px; color: #0d233f; font-family: 'Roboto'; font-weight: 300; text-transform: uppercase; }
+h3, .h3 { font-size: 18px; margin-bottom: 10px; color: #0d233f; font-family: 'Roboto'; font-weight: 300; text-transform: uppercase; }
+h4, .h4 { font-size: 17px; font-weight: 600;}
+h5, .h5 { font-size: 16px; font-weight: 600;}
+h6, .h6 { font-size: 15px; font-weight: 600;}
 h1, h2, h3, .h1, .h2, .h3 { }
 h4, h5, h6, .h4, .h5, .h6 { margin-bottom: 10px; }
 
@@ -488,6 +488,7 @@ select {
 
 .page_row { display: -ms-flexbox; display: flex; -ms-flex-align: start; align-items: flex-start; }
 .page_row__left { -ms-flex: 0 0 240px; flex: 0 0 240px; margin-right: 2.4em; }
+.page_row__left-280 { flex: 0 0 280px; }
 .page_row__right { -ms-flex: 0 0 240px; flex: 0 0 240px; margin-left: 2.4em; }
 .page_row__center { -ms-flex: 1 1 auto; flex: 1 1 auto; }
 
