--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -329,24 +329,34 @@ select {
 }
 .form select:focus { background: url(../img/select_back-active.png) no-repeat scroll center right transparent;}
 
-.txt { line-height: 1.2; color: #676767; font-family: 'Lato', sans-serif; }
-.txt h2, .txt h3, .txt h4 { line-height: 1.3;}
+.txt { line-height: 1.3; font-size: 16px; font-weight: 300; }
+.txt h2 { margin-top: 35px; margin-bottom: 24px; }
+.txt h2, .txt h3, .txt h4 { line-height: 1.3; font-weight: 600; }
 .txt p { margin-bottom: 24px;}
-.txt ul  { margin-bottom: 15px; }
-.txt ul > li { position: relative; margin-bottom: 7px; overflow: hidden; padding-left: 10px; }
+.txt p+ul  { margin-top: -15px; }
+.txt ul  { margin-bottom: 25px; }
+.txt ul > li { position: relative; margin-bottom: 0px; overflow: hidden; padding-left: 35px; }
 .txt ul > li:before {
-    background-color: #5b8db7;
+    background-color: currentColor;
     border-radius: 50%;
     content: '';
-    height: 4px;
+    height: 3px;
     left: 0;
     position: absolute;
     top: 7px;
-    width: 5px;
+    width: 3px;
     z-index: 1;
 }
-.txt a {}
-.txt *:last-child { margin-bottom: 0; }
+.txt a { font-weight: bold; text-decoration: underline; }
+.txt a:hover { text-decoration: none; }
+
+.txt blockquote { border: 2px solid #0d233f; padding: 7px 120px 7px 8px; margin-bottom: 35px; position: relative; min-height: 102px; }
+.txt blockquote p { margin-bottom: 0; }
+.txt blockquote img { position: absolute; top: 8px; right: 7px; }
+.txt blockquote * { margin-left: 12px; }
+.txt blockquote *:first-child { margin-top: 9px; }
+.txt blockquote *:last-child { margin-bottom: 9px; }
+/*.txt *:last-child { margin-bottom: 0; }*/
 
 
 .btn {
