--- a/dev/css/inset.css
+++ b/dev/css/inset.css
@@ -530,11 +530,22 @@ h2.icon-video:before { margin-left: 0; margin-right: 20px; position: relative; t
 .fullpay_block__item { padding: 0; border: 2px solid #1c2840; padding: 17px 100px 17px 20px; display: flex; align-items: center; background: url(../img/fullpay_block__item.png) no-repeat scroll calc(100% - 20px) center transparent; margin-bottom: 18px; font-size: 16px; box-sizing: border-box; min-height: 102px; }
 
 
+.invest_programs__item { margin-bottom: 40px; }
+.invest_programs__title { font-size: 59px; font-weight: bold; }
+.invest_programs__title-pink { color: #ef4c8e; }
+.invest_programs__title-blue { color: #005a94; }
+.invest_programs__title-green { color: #00b6bd; }
+.invest_programs__in { display: flex; align-items: stretch; margin-bottom: 20px; }
+.invest_programs__in > .col-4 { display: flex; flex-direction: column; min-height: 250px; }
+.invest_programs__in > .col-4:not(:last-child) { border-right: 4px solid currentColor; }
+.invest_programs__in > .col-4:nth-child(1) { padding-right: 20px; }
+.invest_programs__in > .col-4:nth-child(2) { padding-right: 20px; padding-left: 20px; }
+.invest_programs__in > .col-4:nth-child(3) { padding-left: 20px; }
 
 
-
-
-
+.invest_programs__in_title { font-size: 22px; font-weight: bold; }
+.invest_programs__in_desc { font-size: 40px; font-weight: bold; margin-top: auto; margin-bottom: auto; transform: translateY(15px); }
+.invest_programs__in_desc-big { font-size: 90px; font-weight: bold; line-height: 18.2px; }
 
 
 
