--- a/dev/css/inset.css
+++ b/dev/css/inset.css
@@ -98,7 +98,7 @@
 .main_inside.main_inside-white .breadcrumbs__link,
 .main_inside.main_inside-white .breadcrumbs__link:after { color: #0d233f; }
 .main_inside.main_inside-white .buy_tabs__item { background-color: #0d233f; }
-
+.main_inside.main_inside-transparent { background-color: transparent; position: relative; z-index: 4;}
 
 
 
@@ -541,21 +541,39 @@ h2.icon-video:before { margin-left: 0; margin-right: 20px; position: relative; t
 .invest_programs__in > .col-4:nth-child(1) { padding-right: 20px; }
 .invest_programs__in > .col-4:nth-child(2) { padding-right: 20px; padding-left: 20px; }
 .invest_programs__in > .col-4:nth-child(3) { padding-left: 20px; }
-
-
 .invest_programs__in_title { font-size: 22px; font-weight: bold; }
 .invest_programs__in_desc { font-size: 40px; font-weight: bold; margin-top: auto; margin-bottom: auto; transform: translateY(15px); }
 .invest_programs__in_desc-big { font-size: 90px; font-weight: bold; line-height: 18.2px; }
 
 
+.location { display: flex; }
+.location_icons { margin-right: 11px; }
+.location_icons__item { position: relative; }
+.location_icons__item-label { text-transform: uppercase; background-color: #0d233f; font-size: 10px; color: #fff; height: 24px; line-height: 24px; padding: 0 10px; border: 1px solid #fff; position: absolute; left: 75px; top: 50%; transform: translateY(-50%); opacity: 0; z-index: -2; transition: all .2s ease; white-space: nowrap; }
+.location_icons__item:hover .location_icons__item-label { z-index: 3; opacity: 1; }
+.location_info { padding: 35px 15px 28px 30px; background-color: rgba(255,255,255,.74); }
 
 
+.location_zoom  { position: absolute; right: 50px; bottom: 22px; }
 
+.location_title { font-size: 30px; margin-bottom: 30px; font-weight: bold; }
+.location_list_item { margin-bottom: 12px; display: flex; align-items: flex-end; }
+.location_list_item__label { font-size: 16px; margin-left: 38px; text-transform: uppercase; line-height: 1; }
 
+.location_list_item__icon { height: 27px; width: 35px; }
+.location_list_item__icon svg { fill: #1C2840; transition: all .2s ease; max-height: 100%; margin: 0 auto; }
+.location_list_item__icon:hover svg { fill: #e0508f; }
 
-
-
-
+.location_map { position: absolute; z-index: 0; margin: auto; top: 0; right: 0; bottom: 0; left: 0; }
+.location_overlay { position: absolute; z-index: 1; margin: auto; top: 0; right: 0; bottom: 0; left: 0; background-color: rgba(13, 35, 63, .4); }
+.location_icons__item { border: 2px solid #0d233f; background-color: #fff; width: 60px; height: 60px; border-radius: 60px; text-align: center; display: flex; align-items: center; justify-content: center; margin-bottom: 12px; transition: all .2s ease; }
+.location_icons__item:hover { border: 2px solid #ffffff; background-color: #0d233f; }
+.location_icons__item:active { border: 2px solid #0d233f; background-color: rgba(13, 35, 63, .4); transition: all .05s ease; }
+.location_icons__item .st0 { fill: #1C2840; transition: all .2s ease; }
+.location_icons__item:hover .st0 { fill: #fff; }
+.location_icons__item-info svg { width: 28px; }
+.location_icons__item-objects svg { width: 38px; }
+.location_icons__item-howdrive svg { width: 24px; }
 
 
 
