--- a/dev/css/inset.css
+++ b/dev/css/inset.css
@@ -560,39 +560,29 @@ h2.icon-video:before { margin-left: 0; margin-right: 20px; position: relative; t
 .location_icons__item:active { border: 2px solid #0d233f; background-color: rgba(13, 35, 63, .4); transition: all .05s ease; }
 .location_icons__item .st0 { fill: #1C2840; transition: all .2s ease; }
 .location_icons__item:hover .st0 { fill: #fff; }
-
 .location_icons > .active > .location_icons__item { border: 2px solid #ffffff; background-color: #0d233f; }
 .location_icons > .active > .location_icons__item .st0 { fill: #fff; }
-
 .location_icons__item-label { text-transform: uppercase; background-color: #0d233f; font-size: 10px; color: #fff; height: 24px; line-height: 24px; padding: 0 10px; border: 1px solid #fff; position: absolute; left: 75px; top: 50%; transform: translateY(-50%); opacity: 0; z-index: -2; transition: all .2s ease; white-space: nowrap; }
 .location_icons__item:hover .location_icons__item-label { z-index: 3; opacity: 1; }
 .location_info { padding: 35px 15px 28px 30px; background-color: rgba(255,255,255,.74); max-width: 373px; pointer-events: all; }
 .location_info#tab_2 { max-width: 474px; }
-
 .location_zoom  { position: absolute; right: 50px; bottom: 22px; }
-
 .location_title { font-size: 30px; margin-bottom: 30px; font-weight: bold; }
 .location_list_item { margin-bottom: 12px;}
 .location_list_item__label { font-size: 16px; margin-left: 38px; text-transform: uppercase; line-height: 1; }
-
 .location_list_item__icon { display: flex; align-items: flex-end;  }
 .location_list_item__icon svg { fill: #1C2840; transition: all .2s ease; max-height: 100%; height: 27px; width: 35px; }
 .location_list_item__icon:hover svg { fill: #e0508f; }
-
 .location_map { position: absolute; z-index: 0; margin: auto; top: 0; right: 0; bottom: 0; left: 0; }
 .location_overlay { position: absolute; z-index: 1; margin: auto; top: 0; right: 0; bottom: 0; left: 0; background-color: rgba(13, 35, 63, .4); pointer-events: none; }
-
 .location_icons__item-info svg { width: 28px; }
 .location_icons__item-objects svg { width: 38px; }
 .location_icons__item-howdrive svg { width: 24px; }
-
 .location_gal { position: absolute; z-index: 9; left: 0; right: 0; bottom: 0; margin: auto; padding: 10px 0 5px; background-color: rgba(13,35,63,.75); }
 .location_gal__list {  }
 .location_gal__item { display: block; float: left; margin-right: 30px; opacity: 0.7; transition: opacity .2s ease; }
 .location_gal__item:hover { opacity: 1; }
 .location_gal__img { max-height: 101px; display: block; line-height: 1; }
-
-
 .location_gal .staff_arrow-inside-left { left: 0; }
 .location_gal .staff_arrow-inside-right { right: 0; }
 
@@ -603,6 +593,12 @@ h2.icon-video:before { margin-left: 0; margin-right: 20px; position: relative; t
 
 
 
+
+.commerce_icons_list { display: flex; flex-wrap: wrap; justify-content: center; max-width: 1024px; margin-left: auto; margin-right: auto; }
+.commerce_icons_item { flex: 0 0 auto; text-align: center; max-width: 183px; margin: 0 10px 41px; }
+.commerce_icons_item svg { height: 48px; margin-left: auto; margin-right: auto; margin-bottom: 15px; }
+.commerce_icons_item .st0 { fill: #1C2840;  }
+.commerce_icons_item__title { font-size: 16px; line-height: 1.1; }
 
 
 
